@@ -70,6 +70,7 @@ Version 1.3-svn:
     * Increased the HP of the Goblin Rouser from 26 to 31.
     * Increased the melee damage of the Goblin Rouser from 5-3 to 6-3.
     * Fixed a bug which prevented a Mermaid Siren picking up a storm trident.
+    * Fixed a bug which caused the slow effect being applied twice.
 
   * User interface
     * Users in the MP lobby can be marked as friends, and notifications received
